@@ -27,6 +27,7 @@ plugins {
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'org.springframework.boot' version '2.5.6'
   id 'com.github.ben-manes.versions' version '0.38.0'
+  id 'com.github.hmcts.rse-cft-lib' version '0.14.2'
   id 'hmcts.ccd.sdk' version '0.25.16'
   id 'au.com.dius.pact' version '4.3.5'
 }
@@ -70,11 +71,6 @@ sourceSets {
     resources.srcDir file('src/contractTest/resources')
   }
 
-  cftlib {
-    compileClasspath += sourceSets.main.output
-    runtimeClasspath += sourceSets.main.output
-  }
-
 }
 
 idea {
@@ -92,8 +88,6 @@ configurations {
   contractTestCompile.extendsFrom testCompile
   contractTestRuntime.extendsFrom testRuntime
   contractTestImplementation.extendsFrom testImplementation
-  cftlibImplementation.extendsFrom implementation
-  cftlibRuntimeOnly.extendsFrom runtimeOnly
 }
 
 tasks.withType(JavaCompile) {
@@ -444,8 +438,6 @@ dependencies {
   contractTestCompile sourceSets.main.runtimeClasspath
   contractTestCompile sourceSets.test.runtimeClasspath
 
-  cftlibImplementation 'com.github.hmcts:rse-cft-lib:0.10.2'
-
 }
 
 mainClassName = 'uk.gov.hmcts.reform.adoption.Application'
@@ -628,18 +620,9 @@ task buildCCDXlsx(type: Exec, dependsOn: generateCCDConfig) {
   outputs.dir layout.buildDirectory.dir('ccd-config')
 }
 
-task bootWithCcd(type: org.springframework.boot.gradle.tasks.run.BootRun, dependsOn: [buildCCDXlsx, loadEnvSecrets], group: 'ccd tasks') {
-  classpath sourceSets.cftlib.runtimeClasspath
-  mainClass = 'uk.gov.hmcts.reform.adoption.RunWithCft'
+bootWithCCD {
+  dependsOn(buildCCDXlsx, loadEnvSecrets)
   doFirst() {
-    // Required by Access Management for Java 17.
-    // https://github.com/x-stream/xstream/issues/101
-    ['java.lang', 'java.util', 'java.lang.reflect', 'java.text', 'java.awt.font'].each {
-      jvmArgs('--add-opens', "java.base/${it}=ALL-UNNAMED")
-    }
-    jvmArgs('--add-opens', 'java.desktop/java.awt.font=ALL-UNNAMED')
-    jvmArgs('-XX:ReservedCodeCacheSize=64m')
-
     project.file('./.aat-env').readLines().each() {
       def index = it.indexOf("=")
       def key = it.substring(0, index)
